# llm-from-scratch

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  gpt2_vocabulary.py  main.py  pyproject.toml  requirements-dev.txt  robinson-crusoe.txt  simple_dataloader.py  simple_dataset.py  simple_tokenizer.py  simple_vocabulary.py  tokenizer.py  training.py  vocabulary.py  vocabulary.txt
llmtest/: test_suite.py
llmtest/test_datasets/: __init__.py  test_booksource.py  test_lm_dataset.py
llmtest/test_tokenizer/: __init__.py  test_huggingface_tokenizer.py  test_rustbpe_tokenizer.py  test_simple_tokenizer.py
src/: llm_main.py
src/datasets/: __init__.py  lm_dataset.py
src/datasets/sources/: base_source.py  book_source.py
src/models/: embeddings.py
src/models/embeddings/: base.py  positional.py  pretrained.py  token.py
src/tokenizer/: huggingface_tokenizer.py  rustbpe_tokenizer.py  simple_tokenizer.py
tokenizer/: __init__.py  rustbpe_tokenizer.py  simple_tokenizer.py  tokenizer.py
