[project]
description = "An educational LLM-from-scratch project"
name = "llm-from-scratch"
readme = "README.md"
requires-python = ">=3.10,<3.15"
version = "0.1.0"

authors = [
  {name = "Salvatore D'Angelo", email = "sasadangelo@gmail.com"},
]

keywords = ["llm", "nlp", "tokenizer", "education"]

dependencies = [
  "transformers==4.57.1",
  "PyMuPDF==1.26.7",
  "torch>=2.9.1",
  "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
  "pytest==8.4.2",
  "maturin==1.9.6",
]

# ---- maturin / crate Rust ----
[tool.maturin]
bindings = "pyo3"
manifest-path = "src/tokenizer/rustbpe/Cargo.toml"
module-name = "rustbpe"
path = "rustbpe"

[lib]
crate-type = ["cdylib"]
name = "rustbpe"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.9.6"]

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3
profile = "black"
skip = [".venv", "__pycache__", "build", "dist"]

[tool.black]
exclude = '''
/(
    \.venv
  | build
  | dist
  | __pycache__
)/
'''
include = '\.pyi?$'
line-length = 120
target-version = ["py310"]

[tool.flake8]
exclude = [".venv"]
extend-ignore = ["E203", "W503"]
max-line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["llmtest"]
